# ode_num_int

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
examples/: CMakeLists.txt
examples/odexec/: CMakeLists.txt  odexec.cpp  reg.cpp  reg.h
include/ctmlex/: lex_idnum.h
include/ctmstd/: cxx_exception.h  cxx_observers.h  cxx_zeroinit.h  m_inline.h  m_tolerance.h
include/ode_num_int/: AlgebraicSolverClassesRegistrator.h  BouncingBall.h  ComponentConfiguration.h  ConstJacobianNewtonDescentDirection.h  CoupledNonlinearOscillators.h  DefaultJacobianProvider.h  DiagonalMapping.h  ErrorEstimator.h  ErrorInfNormCalculator.h  ErrorNormCalculator.h  ErrorStats.h  ExplicitRKHelper.h  ExtrapolatorStepSequence.h  ExtrapolatorStepSequenceBulirsch.h  ExtrapolatorStepSequenceHarmonic.h  ExtrapolatorStepSequenceRomberg.h  Factory.h  JacobianBroydenUpdateNewtonDescentDirection.h  JacobianFakeBroydenUpdateNewtonDescentDirection.h  JacobianHartUpdateNewtonDescentDirection.h  JacobianLazyFakeBroydenUpdateNewtonDescentDirection.h  JacobianProvider.h  JacobianThresholdBasedTrimmer.h  JacobianTrimmer.h  JacobianWidthBasedTrimmer.h  LUFactorizer.h  LUFactorizerTimingStats.h  LinearOdeEventController.h  MappingNormalizer.h  NewtonDescentDirection.h  NewtonIterationPerformer.h  NewtonIterationPerformerImpl.h  NewtonLinearSearch.h  NewtonRegularizationStrategy.h  NewtonSolver.h  NewtonSolverInterface.h  NewtonSolverIterationObservers.h  OdeEventController.h  OdeEventControllerClassesRegistrator.h  OdeInitState.h  (+110 more)
include/ode_num_int/alg/: ConstJacobianNewtonDescentDirection.h  DefaultJacobianProvider.h  DiagonalMapping.h  JacobianBroydenUpdateNewtonDescentDirection.h  JacobianFakeBroydenUpdateNewtonDescentDirection.h  JacobianHartUpdateNewtonDescentDirection.h  JacobianLazyFakeBroydenUpdateNewtonDescentDirection.h  JacobianThresholdBasedTrimmer.h  JacobianWidthBasedTrimmer.h  MappingNormalizer.h  NewtonIterationPerformerImpl.h  NewtonSolver.h  SimpleErrorEstimator.h  SimpleNewtonDescentDirection.h  SimpleNewtonLinearSearch.h  SparseJacobianCalculator.h  SparseJacobianProvider.h  VectorNarrowingMapping.h  VectorReorderingMapping.h  computeJacobian.h
include/ode_num_int/alg_solver/: ConstJacobianNewtonDescentDirection.h  DefaultJacobianProvider.h  DiagonalMapping.h  ErrorEstimator.h  JacobianBroydenUpdateNewtonDescentDirection.h  JacobianFakeBroydenUpdateNewtonDescentDirection.h  JacobianHartUpdateNewtonDescentDirection.h  JacobianLazyFakeBroydenUpdateNewtonDescentDirection.h  JacobianProvider.h  JacobianThresholdBasedTrimmer.h  JacobianTrimmer.h  JacobianWidthBasedTrimmer.h  NewtonDescentDirection.h  NewtonIterationPerformer.h  NewtonIterationPerformerImpl.h  NewtonLinearSearch.h  NewtonSolver.h  NewtonSolverInterface.h  NewtonSolverIterationObservers.h  SimpleErrorEstimator.h  SimpleNewtonDescentDirection.h  SimpleNewtonLinearSearch.h  SparseJacobianCalculator.h  SparseJacobianProvider.h  VectorBijectiveMapping.h  VectorMapping.h  VectorMappingRegularizer.h  VectorNarrowingMapping.h  VectorReorderingMapping.h  computeJacobian.h
include/ode_num_int/infra/: ComponentConfiguration.h  Factory.h  OptionalParameters.h  PerTypeStorage.h  cxx_assert.h  cxx_exception.h  cxx_mock_ptr.h  cxx_observers.h  cxx_zeroinit.h  def_getset.h  def_prop_class.h  def_prop_vd_template_class.h
include/ode_num_int/la/: SparseMatrixTemplate.h  VectorTemplate.h  sparse_util.h  vector_util.h
include/ode_num_int/lu/: LUFactorizer.h  LUFactorizerTimingStats.h  TimingStats.h  util.h
include/ode_num_int/ode/: ErrorInfNormCalculator.h  ExplicitRKHelper.h  ExtrapolatorStepSequenceBulirsch.h  ExtrapolatorStepSequenceHarmonic.h  ExtrapolatorStepSequenceRomberg.h  LinearOdeEventController.h  OdeSolverConfiguration.h  OdeSolverDOPRI45.h  OdeSolverDOPRI56.h  OdeSolverDOPRI78.h  OdeSolverExplicitEmbeddedRK.h  OdeSolverExplicitEuler.h  OdeSolverExplicitRK.h  OdeSolverExtrapolator.h  OdeSolverGragg.h  OdeSolverImplicitEuler.h  OdeSolverRK4.h  OdeSolverRosenbrock_SW2_4.h  OdeSolverRosenbrock_W1.h  OdeSolverRosenbrock_W_base.h  OdeStepMappingEuler.h  OdeStepSizeSimpleController.h  OdeVarNameGenerator.h  SpecifiedOdeInitState.h  ode_solver_output.h
include/ode_num_int/ode_solver/: ErrorInfNormCalculator.h  ExplicitRKHelper.h  ExtrapolatorStepSequence.h  ExtrapolatorStepSequenceBulirsch.h  ExtrapolatorStepSequenceHarmonic.h  ExtrapolatorStepSequenceRomberg.h  LinearOdeEventController.h  OdeInitState.h  OdeNewtonSolver.h  OdeRhs.h  OdeRhsVectorMapping.h  (+22 more)
src/: CMakeLists.txt  OpaqueTickCounter.cpp  PerTypeStorage.cpp  TimerCalibrator.cpp  algebraic_eqn_solver.cpp  newton_solver_config.cpp  ode_event_controller.cpp  ode_num_int.cpp  ode_solver.cpp  ode_solver_output.cpp  ode_solvers.cpp  ode_test_models.cpp  ode_time_stepper.cpp  per_type_storage.cpp  reg_ode_solvers.cpp  test_algebraic_eqn_solver.cpp  test_lu_fact.cpp  test_ode_rosenbrock.cpp  test_ode_time_stepper.cpp  test_richardson_error_calculator.cpp  test_sparse_jacobian.cpp  test_sparse_util.cpp  test_vector_mapping.cpp  timer_calibrator.cpp  timing_util_opaque.cpp
tests/: CMakeLists.txt  dummy_test.cpp  test_VectorTemplate.cpp  test_extrapolatorstepsequence.cpp  test_oderhs.cpp  test_oderhs.cpp.autosave  test_odesolver.cpp  test_pertypestorage.cpp  test_sparsejacobiancalculator.cpp
(+54 files in other folders)
