cmake_minimum_required (VERSION 2.8.3) 
project (ode_num_int_package) 

set (CMAKE_CXX_STANDARD 11)

if(NOT DEFINED ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
message(STATUS "${PROJECT_NAME} setting CMAKE_RUNTIME_OUTPUT_DIRECTORY to ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif()

if(NOT DEFINED ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
message(STATUS "${PROJECT_NAME} setting CMAKE_LIBRARY_OUTPUT_DIRECTORY to ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
endif()

if(NOT DEFINED ${BUILD_SHARED_LIBS})
set (BUILD_SHARED_LIBS true)
endif()

include_directories(${PROJECT_SOURCE_DIR}/include)

add_subdirectory(src)
add_subdirectory(examples)
